# get-started

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  go.mod  go.sum  main  main.go  makefile
.github/workflows/: create-github-release.yml  publish-npm.yml  publish-pypi.yml  release.yml
boilerplates/python/: pyproject.toml  requirements.txt
boilerplates/python/src/: services.py
boilerplates/python/src/functions/: function.py
boilerplates/python/src/workflows/: workflow.py
npm/: README.md  get-started.js  get-started.sh  package.json
pypi/: README.md  get-started.py  pyproject.toml
pypi/restack_get_started/: main.py
restack-get-started/: pyproject.toml  schedule_workflow.py
restack-get-started/src/: services.py
restack-get-started/src/functions/: function.py
restack-get-started/src/workflows/: workflow.py
src/: cloneBoilerplates.go  cloneExampleFolder.go  copyBoilerplates.go  installDependencies.go  main.go  openRestackStudio.go  openRestackUI.go  printSuccess.go  startRestackEngine.go  validateLanguage.go
