[tool.poetry]
name = "restack_get_started"
version = "0.1.0"
description = "A package to get started with Restack"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "restack_get_started", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
restack_get_started = "restack_get_started.get_started:detect_architecture_and_invoke"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"