[tool.poetry]
name = "restackio.get-started"
version = "0.6.9"
readme = "README.md"
description = "A package to get started with Restack"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{include = "restack_get_started"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
'restackio.get-started' = "restack_get_started.main:restack_get_started"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
