[project]
name = "restackio.get-started"
version = "0.6.18"
description = "A package to get started with Restack"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = "~=3.7"
readme = "README.md"
license = "MIT"

[project.scripts]
"get-started" = "restack_get_started.main:restack_get_started"

[tool.hatch.build.targets.sdist]
include = ["restack_get_started"]

[tool.hatch.build.targets.wheel]
include = ["restack_get_started"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
