[project]
name = "quickstart"
version = "0.0.1"
description = "A quickstart for Restack"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "watchfiles>=1.0.0,<2",
    "pydantic>=2.10.4,<3",
    "restack-ai>=0.0.52,<0.0.53",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
interval = "schedule_interval:run_schedule_interval"
calendar = "schedule_calendar:run_schedule_calendar"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
